# session_manager

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py
session_manager/: __init__.py  __main__.py
session_manager/cli/: commands.py
session_manager/core/: config.py  context.py  project.py  project_registry.py  session.py  storage.py
session_manager/integrations/: git.py  github.py  tests.py
session_manager/utils/: formatters.py  paths.py
tests/test_cli/: __init__.py  test_auto_detect.py  test_commands.py
tests/test_core/: test_config.py  test_context.py  test_paths.py  test_project.py  test_project_registry.py  test_session.py  test_storage.py
tests/test_integrations/: test_git.py  test_github.py  test_tests.py
tests/tests_utils/: __init__.py  test_formatters.py
